Fixing main menu to adjust on tablet size screens and stay on the same line as the logo

--- a/wp-content/themes/nir-theme/css/style.scss
+++ b/wp-content/themes/nir-theme/css/style.scss
@@ -929,8 +929,17 @@ footer {
   header nav ul {
     margin-top: 1.33em;
   }
-  header nav ul li {
-    margin-right: 1em;
+  body header .container nav .branding {
+    width: 15%;
+    a span{ display: none;}
+  }
+  header nav div a svg{
+    margin-top: 0;
+    width: 60px;
+    height: 60px;
+  }
+  body header .container nav #menu-main li {
+    margin-right: .3em;
   }
   .container {
     max-width: 800px;
@@ -967,11 +976,7 @@ footer {
     //font-size: 0.85em;
     padding: 20px;
   }
-  header nav div a svg {
-    margin-top: 0;
-    width: 40px;
-    height: 40px;
-  }
+
   body header .container nav #menu-main{
     margin-top: 20px;
   }
